--- a/index.html
+++ b/index.html
@@ -1042,9 +1042,10 @@
                 </div>
                 <div class="about-text">
                     <h3>Paloma Bacellar da Silva</h3>
-                    <p>Formada nos Estados Unidos em 2019, morei lá por 5 anos com bolsa de estudos por conta do vôlei. Ao retornar ao Brasil, enfrentei as dificuldades financeiras comuns e decidi entrar no mercado financeiro para ajudar outras pessoas.</p>
-                    <p>Em 2020, fundei a Bacellar Soluções Financeiras, começando com calma e aprendendo no dia a dia. Em 2024, obtive a certificação da Febraban, essencial para atuar com todos os bancos, além da CPA 10 voltada para o mercado financeiro.</p>
-                    <p>Atualmente, trabalho com uma equipe dedicada que oferece atendimento personalizado com foco no humanizado, entendendo as preocupações dos clientes ao compartilhar informações financeiras.</p>
+                    <p>A Bacellar Cred - Soluções Financeiras vai muito além que uma simples financeira, tudo começou comigo. </p>
+                    <p>Formada nos Estados Unidos em 2019, morei lá por 5 anos com bolsa de estudos. Desde cedo enfrentei a dura realidade dos brasileiros quanto a questões financeiras e decidi entrar no mercado financeiro para ajudar outras pessoas.</p>
+                    <p>Em 2020, fundei a Bacellar Soluções Financeiras, começando com calma e aprendendo no dia a dia, mostrando que o financeiro vai muito além da simples teoria. Em 2024, obtive a certificação da Febraban, essencial para atuar com todos os bancos, além da CPA 10 voltada para o mercado financeiro.</p>
+                    <p>Atualmente, trabalho com uma equipe dedicada que oferece atendimento personalizado com foco no humanizado, entendendo as preocupações dos clientes ao compartilhar informações financeiras. Hoje utilizando minha vasta experiência do mercado financeiro, ajudo pessoas a conquistarem o que é delas por direito</p>
                     <div class="certifications">
                         <div class="certification">
                             <i class="fas fa-award"></i>
@@ -1238,7 +1239,7 @@
                             <span>Total a Pagar:</span>
                             <span id="total-amount">R$ 0,00</span>
                         </div>
-                        <a href="https://wa.me/5511999999999?text=Olá, gostaria de saber mais sobre a simulação que fiz no site da Bacellar" class="btn" style="width: 100%; margin-top: 20px;">
+                        <a href="https://wa.me/5535999008321?text=Olá, gostaria de saber mais sobre a simulação que fiz no site da Bacellar" class="btn" style="width: 100%; margin-top: 20px;">
                             <i class="fab fa-whatsapp" style="margin-right: 10px;"></i> Falar com Especialista
                         </a>
                     </div>
@@ -1282,7 +1283,7 @@
                     </div>
                     <div class="social-links">
                         <a href="https://instagram.com/bacellarsolucoesfinanceiras" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="https://wa.me/5511999999999" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.me/5535999008321" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
@@ -1353,16 +1354,16 @@
                     <div>
                         <h4>Contato</h4>
                         <ul>
-                            <li><a href="tel:+5511999999999">(11) 99999-9999</a></li>
+                            <li><a href="tel:+5535999008321">(11) 99999-9999</a></li>
                             <li><a href="mailto:contato@bacellarcred.com.br">contato@bacellarcred.com.br</a></li>
-                            <li><a href="https://wa.me/5511999999999" target="_blank">WhatsApp</a></li>
+                            <li><a href="https://wa.me/5535999008321" target="_blank">WhatsApp</a></li>
                             <li><a href="https://instagram.com/bacellarsolucoesfinanceiras" target="_blank">Instagram</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Bacellar Soluções Financeiras. Todos os direitos reservados. | bacellarcred.com.br</p>
+                <p>&copy; 2025 Bacellar Soluções Financeiras. Todos os direitos reservados. | bacellarcred.com.br</p>
             </div>
         </div>
     </footer>
@@ -1375,7 +1376,7 @@
         </div>
         <div class="popup-body">
             <p>Fale agora com um de nossos especialistas e descubra a melhor solução para suas necessidades financeiras.</p>
-            <a href="https://wa.me/5511999999999?text=Olá, visitei o site da Bacellar e gostaria de mais informações" class="btn" target="_blank" style="width: 100%;">
+            <a href="https://wa.me/5535999008321?text=Olá, visitei o site da Bacellar e gostaria de mais informações" class="btn" target="_blank" style="width: 100%;">
                 <i class="fab fa-whatsapp" style="margin-right: 10px;"></i> Falar no WhatsApp
             </a>
         </div>
