--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary: #D4AF37;
-            --primary-dark: #B8860B;
+            --primary: #CEC31A;
+            --primary-dark: #CEC31A;
             --primary-light: #F4E4A8;
             --secondary: #000000;
             --secondary-light: #1A1A1A;
@@ -1041,11 +1041,12 @@
                     <img src="foto.png" alt="Paloma Bacellar">
                 </div>
                 <div class="about-text">
-                    <h3>Paloma Bacellar da Silva</h3>
-                    <p>A Bacellar Cred - Soluções Financeiras vai muito além que uma simples financeira, tudo começou comigo. </p>
-                    <p>Formada nos Estados Unidos em 2019, morei lá por 5 anos com bolsa de estudos. Desde cedo enfrentei a dura realidade dos brasileiros quanto a questões financeiras e decidi entrar no mercado financeiro para ajudar outras pessoas.</p>
-                    <p>Em 2020, fundei a Bacellar Soluções Financeiras, começando com calma e aprendendo no dia a dia, mostrando que o financeiro vai muito além da simples teoria. Em 2024, obtive a certificação da Febraban, essencial para atuar com todos os bancos, além da CPA 10 voltada para o mercado financeiro.</p>
-                    <p>Atualmente, trabalho com uma equipe dedicada que oferece atendimento personalizado com foco no humanizado, entendendo as preocupações dos clientes ao compartilhar informações financeiras. Hoje utilizando minha vasta experiência do mercado financeiro, ajudo pessoas a conquistarem o que é delas por direito</p>
+                    <h3>CEO - Paloma Bacellar da Silva</h3>
+                    <h4>Bacellar Cred - Soluções Financeiras</h4>
+                    <p>A Bacellar Cred – Soluções Financeiras vai muito além de uma simples financeira. Ela nasceu da minha trajetória, da minha vivência e do meu propósito de transformar a vida das pessoas por meio de acesso responsável e consciente ao crédito. </p>
+                    <p>Formada nos Estados Unidos em Business Management Degree (Gestão de Negócios) em 2019, morei lá por 5 anos com bolsa de estudos. Desde cedo vivenciei os desafios enfrentados por muitos brasileiros em relação às finanças e, por isso, decidi atuar no mercado para oferecer orientação verdadeira, transparente e humanizada.</p>
+                    <p>Em 2023, fundei a Bacellar Soluções Financeiras. Comecei com calma, aprendendo diariamente, e entendi que o financeiro vai muito além da teoria, envolve confiança, responsabilidade e cuidado com cada cliente. Em 2024, conquistei a certificação da Febraban, essencial para atuação com todos os bancos, além da CPA-10, que ampliou minhas habilidades dentro do mercado financeiro.</p>
+                    <p>Hoje, lidero uma equipe comprometida em oferecer um atendimento realmente personalizado, compreendendo as necessidades e preocupações de cada cliente ao compartilhar informações sensíveis. Com minha experiência prática e sólida no setor, ajudo pessoas a conquistarem o que é delas por direito, organizarem suas finanças e alcançarem seus objetivos com segurança, clareza e tranquilidade.</p>
                     <div class="certifications">
                         <div class="certification">
                             <i class="fas fa-award"></i>
@@ -1239,7 +1240,7 @@
                             <span>Total a Pagar:</span>
                             <span id="total-amount">R$ 0,00</span>
                         </div>
-                        <a href="https://wa.me/5535999008321?text=Olá, gostaria de saber mais sobre a simulação que fiz no site da Bacellar" class="btn" style="width: 100%; margin-top: 20px;">
+                        <a href="https://wa.me/5531998396424?text=Olá, gostaria de saber mais sobre a simulação que fiz no site da Bacellar Soluções Financeiras" class="btn" style="width: 100%; margin-top: 20px;">
                             <i class="fab fa-whatsapp" style="margin-right: 10px;"></i> Falar com Especialista
                         </a>
                     </div>
@@ -1263,27 +1264,27 @@
                             <i class="fas fa-phone"></i>
                             <div>
                                 <h4>Telefone</h4>
-                                <p>(11) 99999-9999</p>
+                                <p>(35) 99900-8321</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>E-mail</h4>
-                                <p>contato@bacellarcred.com.br</p>
+                                <p>bacellarsolucoesfinanceiras@gmail.com</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h4>Endereço</h4>
-                                <p>São Paulo, SP</p>
+                                <p>Poços de Caldas, SP</p>
                             </div>
                         </div>
                     </div>
                     <div class="social-links">
                         <a href="https://instagram.com/bacellarsolucoesfinanceiras" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="https://wa.me/5535999008321" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.me/5531998396424" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
@@ -1354,7 +1355,7 @@
                     <div>
                         <h4>Contato</h4>
                         <ul>
-                            <li><a href="tel:+5535999008321">(11) 99999-9999</a></li>
+                            <li><a href="tel:+5535999008321">(35) 99900-8321</a></li>
                             <li><a href="mailto:contato@bacellarcred.com.br">contato@bacellarcred.com.br</a></li>
                             <li><a href="https://wa.me/5535999008321" target="_blank">WhatsApp</a></li>
                             <li><a href="https://instagram.com/bacellarsolucoesfinanceiras" target="_blank">Instagram</a></li>
@@ -1376,7 +1377,7 @@
         </div>
         <div class="popup-body">
             <p>Fale agora com um de nossos especialistas e descubra a melhor solução para suas necessidades financeiras.</p>
-            <a href="https://wa.me/5535999008321?text=Olá, visitei o site da Bacellar e gostaria de mais informações" class="btn" target="_blank" style="width: 100%;">
+            <a href="https://wa.me/5531998396424?text=Olá, visitei o site da Bacellar e gostaria de mais informações" class="btn" target="_blank" style="width: 100%;">
                 <i class="fab fa-whatsapp" style="margin-right: 10px;"></i> Falar no WhatsApp
             </a>
         </div>
