Add requirement for 6 months of signed contract

--- a/index.html
+++ b/index.html
@@ -1096,6 +1096,7 @@
                     <div class="product-content">
                         <h3>Empréstimo Consignado CLT</h3>
                         <p>Crédito consignado para trabalhadores CLT com as melhores taxas do mercado, parcelas que cabem no seu bolso e liberação ágil.</p>
+                        <h4> Requisito : 6 meses carteira assinada</h4>
                         <ul class="product-features">
                             <li><i class="fas fa-check"></i> Taxas a partir de 1.49% ao mês</li>
                             <li><i class="fas fa-check"></i> Desconto direto em folha de pagamento</li>
