--- a/index.html
+++ b/index.html
@@ -1480,7 +1480,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Soluções Financeiras com Excelência e Confiança</h1>
-                <p>Oferecemos as melhores condições para antecipação do seu FGTS, bolsa família, empréstimo consignado CLT e INSS com atendimento especializado e humanizado.</p>
+                <p>Oferecemos as melhores condições para antecipação do seu FGTS, empréstimo bolsa família, empréstimo consignado CLT e INSS com atendimento especializado e humanizado.</p>
                 <div class="hero-buttons">
                     <a href="#simulator" class="btn">Simular Agora</a>
                     <a href="#contact" class="btn btn-outline">Falar com Especialista</a>
