--- a/index.html
+++ b/index.html
@@ -1588,10 +1588,9 @@
                         <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Bolsa Família">
                     </div>
                     <div class="product-content">
-                        <h3>Antecipação Bolsa Família</h3>
+                        <h3>Empréstimo Bolsa Família</h3>
                         <p>Antecipe seus recebimentos do Bolsa Família com condições especiais e atendimento humanizado para suas necessidades.</p>
                         <ul class="product-features">
-                            <li><i class="fas fa-check"></i> Antecipação de parcelas futuras</li>
                             <li><i class="fas fa-check"></i> Processo rápido e seguro</li>
                             <li><i class="fas fa-check"></i> Taxas competitivas</li>
                             <li><i class="fas fa-check"></i> Atendimento especializado</li>
