--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bacellar Soluções Financeiras - Empréstimo Consignado, FGTS e INSS</title>
+    <meta name="description" content="Empréstimo CLT, FGTS, INSS e consignado em Poços de Caldas e região. Atendemos Andradas, Caldas, Bandeira do Sul, Botelhos, Campestre, Ibitiúra de Minas, Santa Rita de Caldas, Albertina, Jacutinga e Pouso Alegre. Atendimento rápido e seguro.">
+    <meta name="keywords" content="empréstimo CLT Poços de Caldas, empréstimo FGTS Poços de Caldas, empréstimo INSS, correspondente bancário Poços de Caldas, empréstimo para CLT, empréstimo sem consulta, empréstimo rápido, Andradas, Caldas, Bandeira do Sul, Botelhos, Campestre, Ibitiúra de Minas, Santa Rita de Caldas, Albertina, Jacutinga, Pouso Alegre">
+    <meta name="geo.region" content="BR-MG">
+    <meta name="geo.placename" content="Poços de Caldas">
+    <meta name="geo.position" content="-21.786;-46.561">
+    <meta name="ICBM" content="-21.786, -46.561">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.png" sizes="32x32" type="image/png">
@@ -1436,6 +1442,58 @@
             }
         }
     </style>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FinancialService",
+      "name": "Bacellar Soluções Financeiras",
+      "image": "https://www.bacellarcred.com.br/logo.png",
+      "@id": "https://www.bacellarcred.com.br/",
+      "url": "https://www.bacellarcred.com.br/",
+      "telephone": "+5535999008321",
+      "priceRange": "$$",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Centro",
+        "addressLocality": "Poços de Caldas",
+        "addressRegion": "MG",
+        "postalCode": "37700-000",
+        "addressCountry": "BR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -21.786,
+        "longitude": -46.561
+      },
+      "areaServed": [
+        "Poços de Caldas",
+        "Andradas",
+        "Caldas",
+        "Bandeira do Sul",
+        "Botelhos",
+        "Campestre",
+        "Ibitiúra de Minas",
+        "Santa Rita de Caldas",
+        "Albertina",
+        "Jacutinga",
+        "Pouso Alegre"
+      ],
+      "serviceType": [
+        "Empréstimo CLT",
+        "Empréstimo Consignado",
+        "Empréstimo INSS",
+        "Saque FGTS",
+        "Antecipação Saque Aniversário",
+        "Refinanciamento"
+      ],
+      "openingHours": "Mo-Fr 08:00-18:00",
+      "sameAs": [
+        "https://instagram.com/bacellarsolucoesfinanceiras"
+      ]
+    }
+    </script>
+    
 </head>
 <body>
     <!-- Ad Modal -->
