--- a/index.html
+++ b/index.html
@@ -1966,7 +1966,7 @@
                         <ul>
                             <li><a href="tel:+5535999008321">(35) 99900-8321</a></li>
                             <li><a href="tel:+5531998396424">(31)99839-6424</a></li>
-                            <li><a href="mailto:contato@bacellarcred.com.br">contato@bacellarcred.com.br</a></li>
+                            <li><a href="mailto:bacellarsolucoesfinanceiras@gmail.com">bacellarsolucoesfinanceiras@gmail.com</a></li>
                             <li><a href="https://wa.me/5535999008321" target="_blank">WhatsApp</a></li>
                             <li><a href="https://wa.me/555531998396424" target="_blank">WhatsApp</a></li>
                             <li><a href="https://instagram.com/bacellarsolucoesfinanceiras" target="_blank">Instagram</a></li>
